src/css/home.css
/* ____________________style header____________________ */

header, nav{
    width: 100%;
}

header > ul{
    padding: 1rem;
    display:grid;
    list-style: none;
}

header ul li:first-child{
    grid-row: 1 / 4;
    grid-column: 1 / 5;
    padding-left: 1.5rem;
}

header ul li:nth-child(2), header ul li:last-child{
    grid-row: 2;
    text-align: center;
}

.logo{
    width: 80px;
    border-radius: 50%;
}

/* ____________________style main____________________*/

main{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

main input {
    width: 90%;
    padding: 0.5rem 0.8rem;
    border-radius: 1rem;
    background: var(--backgnd);
    color: var(--textContrast);
    box-shadow: 3px 3px 0px 0.5px rgba(0, 0, 0, 0.25);
    border: solid 1px #ADB5BD;
    font-size: 16px;
}

main form{
    width: 90%;
    text-align: center;
}

aside{
    display: none;
}

.show{
    display: flex;
    position: fixed;
    right: 20%;
    top: 5%;
    width: 12rem;
    padding: 0.5rem 1.25rem;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    border-radius: 1.875rem;
    background: var(--contrast);
    margin-bottom: 2%;
}

.label{
    background: var(--contrast);
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: relative;
    border-radius: 25px;
    height: 32px;
    width: 60px;
    border: solid var(--text);
}

.ball{
    background-color: var(--text);
    position: absolute;
    border-radius: 50%;
    height: 24px;
    width: 24px;
    top: 6%;
    left: 4px;
    transition: 1s;
}

.checkbox{
    opacity: 0;
    position: absolute;
}

.checkbox:checked + .label .ball{
    transform: translateX(23px);
}

@media screen and (min-width: 768px) {

    * {
        font-size: 16px;
    }

    .icon{
        scale: 1.2;
    }
    
    main input{
        padding: 0.8rem;
    }

    .post header a{
        font-size: 16px;
    }

}

@media screen and (min-width: 1280px) {

    * {
        font-size: 18px;
    }

    .show{
        margin-top: 0%;
    }

}

